--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://SCENE.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scripts/CCC/", "res://Scripts/CCC/Control/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scripts/CCC/Support/CCC_UIManager.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scripts/CCC/", "res://Scripts/CCC/Support/", "res://Scripts/CCC/Control/", "res://Scripts/CCC/Character/", "res://Scripts/CCC/Camera/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -29,11 +29,11 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://CCC.tscn", "res://Assets/ps_character_gurl.tscn", "res://SCENE.tscn")
-current_scene="res://Assets/ps_character_gurl.tscn"
-center_split_offset=-700
+current_scene="res://CCC.tscn"
+center_split_offset=-731
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
-selected_bottom_panel_item=5
+selected_bottom_panel_item=0
 
 [EditorWindow]
 
@@ -44,8 +44,8 @@ size=Vector2i(3248, 1669)
 
 [ScriptEditor]
 
-open_scripts=["res://THEORY/3C_AdpatationToFramework.md", "res://Scripts/OLD/Controllers/AnimationManager.gd", "res://Scripts/OLD/Character/Camera/CameraController.gd", "res://Scripts/OLD/Character/Camera/CameraInput.gd", "res://Scripts/OLD/Character/Camera/CameraResponder.gd", "res://Scripts/OLD/_Debug/CharacterDebugHelper.gd", "res://Scripts/OLD/Character/CharacterStatesBase.gd", "res://character_controller_plan.md", "res://Scripts/OLD/InputComponents/ClickNavigationComponent.gd", "res://Scripts/OLD/_Debug/DebugUI.gd", "res://Scripts/OLD/InputComponents/GamepadComponent.gd", "res://Scripts/OLD/InputComponents/InputManager.gd", "res://Scripts/OLD/Character/MovementManager.gd", "res://Scripts/OLD/Character/State.gd", "res://Scripts/OLD/Character/States/StateAirborne.gd", "res://Scripts/OLD/Character/States/StateIdle.gd", "res://Scripts/OLD/Character/States/StateJumping.gd", "res://Scripts/OLD/Character/States/StateLanding.gd", "res://Scripts/OLD/Character/States/StateRunning.gd", "res://Scripts/OLD/Character/States/StateWalking.gd"]
-selected_script="res://THEORY/3C_AdpatationToFramework.md"
+open_scripts=["res://THEORY/3C_AdpatationToFramework.md", "res://Scripts/OLD/Controllers/AnimationManager.gd", "res://Scripts/OLD/Character/Camera/CameraController.gd", "res://Scripts/OLD/Character/Camera/CameraInput.gd", "res://Scripts/OLD/Character/Camera/CameraResponder.gd", "res://Scripts/CCC/Support/CCC_AnimationManager.gd", "res://Scripts/CCC/Camera/CCC_CameraController.gd", "res://Scripts/CCC/Camera/CCC_CameraInput.gd", "res://Scripts/CCC/Camera/CCC_CameraModes.gd", "res://Scripts/CCC/Camera/CCC_CameraResponder.gd", "res://Scripts/CCC/Character/CCC_CharacterActions.gd", "res://Scripts/CCC/Character/CCC_CharacterController.gd", "res://Scripts/CCC/Character/CCC_CharacterMovement.gd", "res://Scripts/CCC/Character/CCC_CharacterPhysics.gd", "res://Scripts/CCC/Character/CCC_CharacterState.gd", "res://Scripts/CCC/Control/CCC_ClickNavigation.gd", "res://Scripts/CCC/Support/CCC_DebugSystem.gd", "res://Scripts/CCC/Control/CCC_GamepadInput.gd", "res://Scripts/CCC/Control/CCC_InputManager.gd", "res://Scripts/CCC/Control/CCC_KeyboardInput.gd", "res://Scripts/CCC/Support/CCC_UIManager.gd", "res://Scripts/OLD/_Debug/CharacterDebugHelper.gd", "res://Scripts/OLD/Character/CharacterStatesBase.gd", "res://character_controller_plan.md", "res://Scripts/OLD/InputComponents/ClickNavigationComponent.gd", "res://Scripts/OLD/_Debug/DebugUI.gd", "res://Scripts/OLD/InputComponents/GamepadComponent.gd", "res://Scripts/OLD/InputComponents/InputManager.gd", "res://Scripts/OLD/Character/MovementManager.gd", "res://Scripts/OLD/Character/State.gd", "res://Scripts/OLD/Character/States/StateAirborne.gd", "res://Scripts/OLD/Character/States/StateIdle.gd", "res://Scripts/OLD/Character/States/StateJumping.gd", "res://Scripts/OLD/Character/States/StateLanding.gd", "res://Scripts/OLD/Character/States/StateRunning.gd", "res://Scripts/OLD/Character/States/StateWalking.gd"]
+selected_script="res://Scripts/CCC/Camera/CCC_CameraInput.gd"
 open_help=[]
 script_split_offset=526
 list_split_offset=0
