--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,5 +1,13 @@
 list=[{
 "base": &"Node",
+"class": &"AnimationManager",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/OLD/Controllers/AnimationManager.gd"
+}, {
+"base": &"Node",
 "class": &"CCC_AnimationManager",
 "icon": "",
 "is_abstract": false,
@@ -126,4 +134,148 @@ list=[{
 "is_tool": false,
 "language": &"GDScript",
 "path": "res://Scripts/CCC/Support/CCC_UIManager.gd"
+}, {
+"base": &"Node3D",
+"class": &"CameraController",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/OLD/Character/Camera/CameraController.gd"
+}, {
+"base": &"Node",
+"class": &"CameraInput",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/OLD/Character/Camera/CameraInput.gd"
+}, {
+"base": &"Node",
+"class": &"CameraResponder",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/OLD/Character/Camera/CameraResponder.gd"
+}, {
+"base": &"Node",
+"class": &"CharacterDebugHelper",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/OLD/_Debug/CharacterDebugHelper.gd"
+}, {
+"base": &"State",
+"class": &"CharacterStateBase",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/OLD/Character/CharacterStatesBase.gd"
+}, {
+"base": &"Node",
+"class": &"CharacterStateMachine",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/OLD/Character/CharacterStateMachine.gd"
+}, {
+"base": &"Node",
+"class": &"ClickNavigationComponent",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/OLD/InputComponents/ClickNavigationComponent.gd"
+}, {
+"base": &"Node",
+"class": &"GamepadInputComponent",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/OLD/InputComponents/GamepadComponent.gd"
+}, {
+"base": &"Node",
+"class": &"InputManager",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/OLD/InputComponents/InputManager.gd"
+}, {
+"base": &"Node",
+"class": &"JumpSystem",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/OLD/Components/JumpSystem.gd"
+}, {
+"base": &"Node",
+"class": &"MovementManager",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/OLD/Character/MovementManager.gd"
+}, {
+"base": &"Node",
+"class": &"State",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/OLD/Character/State.gd"
+}, {
+"base": &"CharacterStateBase",
+"class": &"StateAirborne",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/OLD/Character/States/StateAirborne.gd"
+}, {
+"base": &"CharacterStateBase",
+"class": &"StateIdle",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/OLD/Character/States/StateIdle.gd"
+}, {
+"base": &"CharacterStateBase",
+"class": &"StateJumping",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/OLD/Character/States/StateJumping.gd"
+}, {
+"base": &"CharacterStateBase",
+"class": &"StateLanding",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/OLD/Character/States/StateLanding.gd"
+}, {
+"base": &"CharacterStateBase",
+"class": &"StateRunning",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/OLD/Character/States/StateRunning.gd"
+}, {
+"base": &"CharacterStateBase",
+"class": &"StateWalking",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/OLD/Character/States/StateWalking.gd"
 }]
