--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -170,20 +170,6 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://THEORY/3C_AdpatationToFramework.md]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 32,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 16,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "Markdown"
-}
-
 [res://Scripts/Character/States/StateAirborne.gd]
 
 state={
@@ -320,6 +306,76 @@ state={
 "h_scroll_position": 0,
 "row": 190,
 "scroll_position": 152.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://THEORY/3c_gamedev_framework.md]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 0,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "Markdown"
+}
+
+[res://Scripts/CCC/CCC_CameraManager.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 0,
+"scroll_position": 215.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/CCC/CCC_CharacterManager.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 18,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 208,
+"scroll_position": 168.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/CCC/CCC_ControlManager.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 0,
+"scroll_position": 112.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/CCC/CCC_CharacterController.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 12,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 451,
+"scroll_position": 415.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
