--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -91,11 +91,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 39,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 49,
-"scroll_position": 28.0,
+"row": 40,
+"scroll_position": 20.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -136,7 +136,7 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 0,
+"row": 20,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -164,8 +164,8 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 0,
-"scroll_position": 0.0,
+"row": 42,
+"scroll_position": 22.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -329,12 +329,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 34,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 0,
-"scroll_position": 215.0,
-"selection": false,
+"row": 197,
+"scroll_position": 178.0,
+"selection": true,
+"selection_from_column": 31,
+"selection_from_line": 197,
+"selection_to_column": 34,
+"selection_to_line": 197,
 "syntax_highlighter": "GDScript"
 }
 
@@ -343,12 +347,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 18,
+"column": 58,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 208,
-"scroll_position": 168.0,
-"selection": false,
+"row": 0,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 55,
+"selection_from_line": 0,
+"selection_to_column": 58,
+"selection_to_line": 0,
 "syntax_highlighter": "GDScript"
 }
 
@@ -357,12 +365,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 9,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 0,
-"scroll_position": 112.0,
-"selection": false,
+"row": 121,
+"scroll_position": 102.0,
+"selection": true,
+"selection_from_column": 6,
+"selection_from_line": 121,
+"selection_to_column": 9,
+"selection_to_line": 121,
 "syntax_highlighter": "GDScript"
 }
 
@@ -371,11 +383,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 12,
+"column": 14,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 451,
-"scroll_position": 415.0,
+"row": 438,
+"scroll_position": 428.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
