--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -329,16 +329,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 34,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 197,
-"scroll_position": 178.0,
-"selection": true,
-"selection_from_column": 31,
-"selection_from_line": 197,
-"selection_to_column": 34,
-"selection_to_line": 197,
+"row": 54,
+"scroll_position": 37.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -379,15 +375,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 31,
+"column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 423,
-"scroll_position": 403.0,
-"selection": true,
-"selection_from_column": 5,
-"selection_from_line": 423,
-"selection_to_column": 31,
-"selection_to_line": 423,
+"row": 41,
+"scroll_position": 23.46,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
