--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -343,16 +343,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 58,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 0,
-"scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 55,
-"selection_from_line": 0,
-"selection_to_column": 58,
-"selection_to_line": 0,
+"row": 66,
+"scroll_position": 60.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -375,11 +371,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 26,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 41,
-"scroll_position": 23.46,
+"row": 63,
+"scroll_position": 33.98,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
