--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -5,7 +5,15 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Scripts/Controllers/AnimationManager.gd"
+"path": "res://Scripts/CCC/Character/AnimationManager.gd"
+}, {
+"base": &"Node",
+"class": &"AnimationManager_old",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/Controllers/AnimationManager_old.gd"
 }, {
 "base": &"Node",
 "class": &"CCC_CameraManager",
@@ -14,14 +22,6 @@ list=[{
 "is_tool": false,
 "language": &"GDScript",
 "path": "res://Scripts/CCC/CCC_CameraManager.gd"
-}, {
-"base": &"CharacterBody3D",
-"class": &"CCC_CharacterController",
-"icon": "",
-"is_abstract": false,
-"is_tool": false,
-"language": &"GDScript",
-"path": "res://Scripts/CCC/CCC_CharacterController.gd"
 }, {
 "base": &"Node",
 "class": &"CCC_CharacterManager",
@@ -104,6 +104,14 @@ list=[{
 "path": "res://Scripts/InputComponents/ClickNavigationComponent.gd"
 }, {
 "base": &"Node",
+"class": &"ClickNavigationSystem",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/CCC/Control/ClickNavigationSystem.gd"
+}, {
+"base": &"Node",
 "class": &"GamepadInputComponent",
 "icon": "",
 "is_abstract": false,
@@ -120,6 +128,14 @@ list=[{
 "path": "res://Scripts/InputComponents/InputManager.gd"
 }, {
 "base": &"Node",
+"class": &"InputSystem",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/CCC/Control/InputSystem.gd"
+}, {
+"base": &"Node",
 "class": &"JumpSystem",
 "icon": "",
 "is_abstract": false,
@@ -134,6 +150,14 @@ list=[{
 "is_tool": false,
 "language": &"GDScript",
 "path": "res://Scripts/Character/MovementManager.gd"
+}, {
+"base": &"Node",
+"class": &"MovementSystem",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/CCC/Character/MovementSystem.gd"
 }, {
 "base": &"Node",
 "class": &"State",
