--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -5,15 +5,7 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Scripts/CCC/Character/AnimationManager.gd"
-}, {
-"base": &"Node",
-"class": &"AnimationManager_old",
-"icon": "",
-"is_abstract": false,
-"is_tool": false,
-"language": &"GDScript",
-"path": "res://Scripts/Controllers/AnimationManager_old.gd"
+"path": "res://Scripts/Controllers/AnimationManager.gd"
 }, {
 "base": &"Node",
 "class": &"CCC_CameraManager",
@@ -22,6 +14,14 @@ list=[{
 "is_tool": false,
 "language": &"GDScript",
 "path": "res://Scripts/CCC/CCC_CameraManager.gd"
+}, {
+"base": &"CharacterBody3D",
+"class": &"CCC_CharacterController",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/CCC/CCC_CharacterController.gd"
 }, {
 "base": &"Node",
 "class": &"CCC_CharacterManager",
@@ -104,14 +104,6 @@ list=[{
 "path": "res://Scripts/InputComponents/ClickNavigationComponent.gd"
 }, {
 "base": &"Node",
-"class": &"ClickNavigationSystem",
-"icon": "",
-"is_abstract": false,
-"is_tool": false,
-"language": &"GDScript",
-"path": "res://Scripts/CCC/Control/ClickNavigationSystem.gd"
-}, {
-"base": &"Node",
 "class": &"GamepadInputComponent",
 "icon": "",
 "is_abstract": false,
@@ -128,14 +120,6 @@ list=[{
 "path": "res://Scripts/InputComponents/InputManager.gd"
 }, {
 "base": &"Node",
-"class": &"InputSystem",
-"icon": "",
-"is_abstract": false,
-"is_tool": false,
-"language": &"GDScript",
-"path": "res://Scripts/CCC/Control/InputSystem.gd"
-}, {
-"base": &"Node",
 "class": &"JumpSystem",
 "icon": "",
 "is_abstract": false,
@@ -150,14 +134,6 @@ list=[{
 "is_tool": false,
 "language": &"GDScript",
 "path": "res://Scripts/Character/MovementManager.gd"
-}, {
-"base": &"Node",
-"class": &"MovementSystem",
-"icon": "",
-"is_abstract": false,
-"is_tool": false,
-"language": &"GDScript",
-"path": "res://Scripts/CCC/Character/MovementSystem.gd"
 }, {
 "base": &"Node",
 "class": &"State",
