--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -343,12 +343,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 58,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 66,
-"scroll_position": 60.0,
-"selection": false,
+"row": 0,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 55,
+"selection_from_line": 0,
+"selection_to_column": 58,
+"selection_to_line": 0,
 "syntax_highlighter": "GDScript"
 }
 
@@ -371,11 +375,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 26,
+"column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 63,
-"scroll_position": 33.98,
+"row": 41,
+"scroll_position": 23.46,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
