Revert "CCC refactor phase 2"
This reverts commit 699730bcdcb68074e4ceb92c8c78b1f0748eaeb5.

--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -329,12 +329,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 34,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 54,
-"scroll_position": 37.0,
-"selection": false,
+"row": 197,
+"scroll_position": 178.0,
+"selection": true,
+"selection_from_column": 31,
+"selection_from_line": 197,
+"selection_to_column": 34,
+"selection_to_line": 197,
 "syntax_highlighter": "GDScript"
 }
 
@@ -375,11 +379,15 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 31,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 41,
-"scroll_position": 23.46,
-"selection": false,
+"row": 423,
+"scroll_position": 403.0,
+"selection": true,
+"selection_from_column": 5,
+"selection_from_line": 423,
+"selection_to_column": 31,
+"selection_to_line": 423,
 "syntax_highlighter": "GDScript"
 }
