Revert "CCC phase 1 wrappers checkpoint"
This reverts commit 8c971a3e8bf620cba10aa19fffe222743ec1a634.

--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -91,11 +91,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 39,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 40,
-"scroll_position": 20.0,
+"row": 49,
+"scroll_position": 28.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -136,7 +136,7 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 20,
+"row": 0,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -164,8 +164,8 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 42,
-"scroll_position": 22.0,
+"row": 0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -329,16 +329,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 34,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 197,
-"scroll_position": 178.0,
-"selection": true,
-"selection_from_column": 31,
-"selection_from_line": 197,
-"selection_to_column": 34,
-"selection_to_line": 197,
+"row": 0,
+"scroll_position": 215.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -347,16 +343,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 58,
+"column": 18,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 0,
-"scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 55,
-"selection_from_line": 0,
-"selection_to_column": 58,
-"selection_to_line": 0,
+"row": 208,
+"scroll_position": 168.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -365,16 +357,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 9,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 121,
-"scroll_position": 102.0,
-"selection": true,
-"selection_from_column": 6,
-"selection_from_line": 121,
-"selection_to_column": 9,
-"selection_to_line": 121,
+"row": 0,
+"scroll_position": 112.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -383,11 +371,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 14,
+"column": 12,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 438,
-"scroll_position": 428.0,
+"row": 451,
+"scroll_position": 415.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
