--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scripts/CCC/CCC_CharacterController.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://THEORY/", "res://Scripts/", "res://Scripts/Controllers/", "res://Scripts/Components/", "res://Scripts/Character/", "res://Scripts/CCC/")
+dock_filesystem_selected_paths=PackedStringArray()
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scripts/Controllers/", "res://Scripts/Components/", "res://Scripts/Character/", "res://Scripts/CCC/", "res://Scripts/CCC/Camera/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -19,7 +19,7 @@ dock_closed=[]
 dock_split_2=6
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=584
+dock_hsplit_2=585
 dock_hsplit_3=-480
 dock_hsplit_4=0
 dock_3="Scene,Import"
@@ -39,13 +39,13 @@ selected_bottom_panel_item=0
 
 screen=0
 mode="maximized"
-position=Vector2i(0, 88)
+position=Vector2i(3840, 29)
 size=Vector2i(3248, 1669)
 
 [ScriptEditor]
 
-open_scripts=["res://THEORY/3c_gamedev_framework.md", "res://Scripts/Controllers/AnimationManager.gd", "res://Scripts/CCC/Camera/CameraController.gd", "res://Scripts/CCC/Camera/CameraInput.gd", "res://Scripts/CCC/Camera/CameraResponder.gd", "res://Scripts/CCC/CCC_CameraManager.gd", "res://Scripts/CCC/CCC_CharacterController.gd", "res://Scripts/CCC/CCC_CharacterManager.gd", "res://Scripts/CCC/CCC_ControlManager.gd", "res://Scripts/_Debug/CharacterDebugHelper.gd", "res://Scripts/Character/CharacterStateMachine.gd", "res://Scripts/Character/CharacterStatesBase.gd", "res://character_controller_plan.md", "res://Scripts/InputComponents/ClickNavigationComponent.gd", "res://Scripts/Controllers/ControllerCharacter.gd", "res://Scripts/_Debug/DebugUI.gd", "res://Scripts/InputComponents/GamepadComponent.gd", "res://Scripts/InputComponents/InputManager.gd", "res://Scripts/Components/JumpSystem.gd", "res://Scripts/Character/MovementManager.gd", "res://Scripts/Character/State.gd", "res://Scripts/Character/States/StateAirborne.gd", "res://Scripts/Character/States/StateIdle.gd", "res://Scripts/Character/States/StateJumping.gd", "res://Scripts/Character/States/StateLanding.gd", "res://Scripts/Character/States/StateRunning.gd", "res://Scripts/Character/States/StateWalking.gd"]
-selected_script="res://Scripts/CCC/CCC_CharacterController.gd"
+open_scripts=["res://THEORY/3C_AdpatationToFramework.md", "res://Scripts/Controllers/AnimationManager.gd", "res://Scripts/CCC/Camera/CameraController.gd", "res://Scripts/CCC/Camera/CameraInput.gd", "res://Scripts/CCC/Camera/CameraResponder.gd", "res://Scripts/_Debug/CharacterDebugHelper.gd", "res://Scripts/Character/CharacterStateMachine.gd", "res://Scripts/Character/CharacterStatesBase.gd", "res://character_controller_plan.md", "res://Scripts/InputComponents/ClickNavigationComponent.gd", "res://Scripts/Controllers/ControllerCharacter.gd", "res://Scripts/_Debug/DebugUI.gd", "res://Scripts/InputComponents/GamepadComponent.gd", "res://Scripts/InputComponents/InputManager.gd", "res://Scripts/Components/JumpSystem.gd", "res://Scripts/Character/MovementManager.gd", "res://Scripts/Character/State.gd", "res://Scripts/Character/States/StateAirborne.gd", "res://Scripts/Character/States/StateIdle.gd", "res://Scripts/Character/States/StateJumping.gd", "res://Scripts/Character/States/StateLanding.gd", "res://Scripts/Character/States/StateRunning.gd", "res://Scripts/Character/States/StateWalking.gd"]
+selected_script="res://Scripts/CCC/Camera/CameraController.gd"
 open_help=[]
 script_split_offset=526
 list_split_offset=0
