--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,153 +1,1 @@
-list=[{
-"base": &"Node",
-"class": &"AnimationManager",
-"icon": "",
-"is_abstract": false,
-"is_tool": false,
-"language": &"GDScript",
-"path": "res://Scripts/Controllers/AnimationManager.gd"
-}, {
-"base": &"Node3D",
-"class": &"CameraController",
-"icon": "",
-"is_abstract": false,
-"is_tool": false,
-"language": &"GDScript",
-"path": "res://Scripts/CCC/Camera/CameraController.gd"
-}, {
-"base": &"Node",
-"class": &"CameraInput",
-"icon": "",
-"is_abstract": false,
-"is_tool": false,
-"language": &"GDScript",
-"path": "res://Scripts/CCC/Camera/CameraInput.gd"
-}, {
-"base": &"Node",
-"class": &"CameraResponder",
-"icon": "",
-"is_abstract": false,
-"is_tool": false,
-"language": &"GDScript",
-"path": "res://Scripts/CCC/Camera/CameraResponder.gd"
-}, {
-"base": &"Node",
-"class": &"CharacterDebugHelper",
-"icon": "",
-"is_abstract": false,
-"is_tool": false,
-"language": &"GDScript",
-"path": "res://Scripts/_Debug/CharacterDebugHelper.gd"
-}, {
-"base": &"State",
-"class": &"CharacterStateBase",
-"icon": "",
-"is_abstract": false,
-"is_tool": false,
-"language": &"GDScript",
-"path": "res://Scripts/Character/CharacterStatesBase.gd"
-}, {
-"base": &"Node",
-"class": &"CharacterStateMachine",
-"icon": "",
-"is_abstract": false,
-"is_tool": false,
-"language": &"GDScript",
-"path": "res://Scripts/Character/CharacterStateMachine.gd"
-}, {
-"base": &"Node",
-"class": &"ClickNavigationComponent",
-"icon": "",
-"is_abstract": false,
-"is_tool": false,
-"language": &"GDScript",
-"path": "res://Scripts/InputComponents/ClickNavigationComponent.gd"
-}, {
-"base": &"Node",
-"class": &"GamepadInputComponent",
-"icon": "",
-"is_abstract": false,
-"is_tool": false,
-"language": &"GDScript",
-"path": "res://Scripts/InputComponents/GamepadComponent.gd"
-}, {
-"base": &"Node",
-"class": &"InputManager",
-"icon": "",
-"is_abstract": false,
-"is_tool": false,
-"language": &"GDScript",
-"path": "res://Scripts/InputComponents/InputManager.gd"
-}, {
-"base": &"Node",
-"class": &"JumpSystem",
-"icon": "",
-"is_abstract": false,
-"is_tool": false,
-"language": &"GDScript",
-"path": "res://Scripts/Components/JumpSystem.gd"
-}, {
-"base": &"Node",
-"class": &"MovementManager",
-"icon": "",
-"is_abstract": false,
-"is_tool": false,
-"language": &"GDScript",
-"path": "res://Scripts/Character/MovementManager.gd"
-}, {
-"base": &"Node",
-"class": &"State",
-"icon": "",
-"is_abstract": false,
-"is_tool": false,
-"language": &"GDScript",
-"path": "res://Scripts/Character/State.gd"
-}, {
-"base": &"CharacterStateBase",
-"class": &"StateAirborne",
-"icon": "",
-"is_abstract": false,
-"is_tool": false,
-"language": &"GDScript",
-"path": "res://Scripts/Character/States/StateAirborne.gd"
-}, {
-"base": &"CharacterStateBase",
-"class": &"StateIdle",
-"icon": "",
-"is_abstract": false,
-"is_tool": false,
-"language": &"GDScript",
-"path": "res://Scripts/Character/States/StateIdle.gd"
-}, {
-"base": &"CharacterStateBase",
-"class": &"StateJumping",
-"icon": "",
-"is_abstract": false,
-"is_tool": false,
-"language": &"GDScript",
-"path": "res://Scripts/Character/States/StateJumping.gd"
-}, {
-"base": &"CharacterStateBase",
-"class": &"StateLanding",
-"icon": "",
-"is_abstract": false,
-"is_tool": false,
-"language": &"GDScript",
-"path": "res://Scripts/Character/States/StateLanding.gd"
-}, {
-"base": &"CharacterStateBase",
-"class": &"StateRunning",
-"icon": "",
-"is_abstract": false,
-"is_tool": false,
-"language": &"GDScript",
-"path": "res://Scripts/Character/States/StateRunning.gd"
-}, {
-"base": &"CharacterStateBase",
-"class": &"StateWalking",
-"icon": "",
-"is_abstract": false,
-"is_tool": false,
-"language": &"GDScript",
-"path": "res://Scripts/Character/States/StateWalking.gd"
-}]
+list=[]
