--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -28,8 +28,8 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://SCENE.tscn", "res://CCC.tscn")
-current_scene="res://CCC.tscn"
+open_scenes=PackedStringArray("res://SCENE.tscn")
+current_scene="res://SCENE.tscn"
 center_split_offset=-700
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
