--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,1 +1,41 @@
-list=[]
+list=[{
+"base": &"Node3D",
+"class": &"CCC_Manager",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/CCC_Manager.gd"
+}, {
+"base": &"Node3D",
+"class": &"CameraSystem",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/CAMERA.gd"
+}, {
+"base": &"Node3D",
+"class": &"CharacterSystem",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/CHARACTER.gd"
+}, {
+"base": &"Node3D",
+"class": &"ControlSystem",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/CONTROL.gd"
+}, {
+"base": &"Node",
+"class": &"OrbitComponent",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/CameraComponents/OrbitComponent.gd"
+}]
