--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray()
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://THEORY/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scripts/CameraComponents/OrbitComponent.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://THEORY/", "res://Scripts/", "res://Scripts/CameraComponents/", "res://Assets/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -28,11 +28,12 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://SCENE.tscn")
-current_scene="res://SCENE.tscn"
+open_scenes=PackedStringArray("res://SCENE.tscn", "res://CCC.tscn", "res://Assets/Character.tscn")
+current_scene="res://CCC.tscn"
 center_split_offset=-700
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
+selected_bottom_panel_item=4
 
 [EditorWindow]
 
@@ -43,8 +44,8 @@ size=Vector2i(3248, 1669)
 
 [ScriptEditor]
 
-open_scripts=["res://character_controller_plan.md"]
-selected_script=""
+open_scripts=["res://Scripts/CAMERA.gd", "res://Scripts/CameraComponents/OrbitComponent.gd", "res://Scripts/CCC_Manager.gd", "res://Scripts/CHARACTER.gd", "res://character_controller_plan.md", "res://Scripts/CONTROL.gd"]
+selected_script="res://Scripts/CameraComponents/OrbitComponent.gd"
 open_help=[]
 script_split_offset=526
 list_split_offset=0
