--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -1,35 +1,3 @@
-[res://Scripts/InputComponents/ClickNavigationComponent.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 59,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 43,
-"scroll_position": 26.0,
-"selection": true,
-"selection_from_column": 43,
-"selection_from_line": 43,
-"selection_to_column": 59,
-"selection_to_line": 43,
-"syntax_highlighter": "GDScript"
-}
-
-[res://Scripts/_Debug/DebugUI.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 21,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 33,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
 [res://character_controller_plan.md]
 
 state={
@@ -39,264 +7,26 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 177,
-"scroll_position": 0.0,
+"scroll_position": 118.0,
 "selection": false,
 "syntax_highlighter": "Markdown"
 }
 
-[res://Scripts/Character/State.gd]
+[res://Scripts/CCC_Manager.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 42,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 82,
-"scroll_position": 57.0,
+"row": 112,
+"scroll_position": 79.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
 
-[res://Scripts/Components/JumpSystem.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 50,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 157,
-"scroll_position": 121.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://Scripts/_Debug/CharacterDebugHelper.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 81,
-"scroll_position": 46.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://Scripts/InputComponents/InputManager.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 39,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 49,
-"scroll_position": 28.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://Scripts/Controllers/AnimationManager.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 23,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 108,
-"scroll_position": 73.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://Scripts/Character/CharacterStateMachine.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 12,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 162,
-"scroll_position": 145.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://Scripts/Character/CharacterStatesBase.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 0,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://Scripts/Controllers/ControllerCharacter.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 0,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://Scripts/Character/MovementManager.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 0,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://Scripts/Character/States/StateAirborne.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 13,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://Scripts/Character/States/StateIdle.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 14,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://Scripts/Character/States/StateJumping.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 23,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 20,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://Scripts/Character/States/StateLanding.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 31,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 17,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://Scripts/Character/States/StateRunning.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 14,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://Scripts/Character/States/StateWalking.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 3,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://Scripts/InputComponents/GamepadComponent.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 0,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://Scripts/CCC/Camera/CameraController.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 36,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 20,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://Scripts/CCC/Camera/CameraInput.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 35,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 64,
-"scroll_position": 26.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://Scripts/CCC/Camera/CameraResponder.gd]
+[res://Scripts/CAMERA.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
@@ -304,8 +34,54 @@ state={
 "column": 2,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 190,
-"scroll_position": 152.0,
+"row": 204,
+"scroll_position": 169.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/CHARACTER.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 31,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 0,
+"selection_to_column": 0,
+"selection_to_line": 31,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/CONTROL.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 24,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 11,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/CameraComponents/OrbitComponent.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 58,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 74,
+"scroll_position": 39.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
