--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -32,10 +32,34 @@ list=[{
 "path": "res://Scripts/CONTROL.gd"
 }, {
 "base": &"Node",
+"class": &"InputCore",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/InputCore.gd"
+}, {
+"base": &"Node",
+"class": &"InputPriorityManager",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/InputPriorityManager.gd"
+}, {
+"base": &"Node",
 "class": &"OrbitComponent",
 "icon": "",
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
 "path": "res://Scripts/CameraComponents/OrbitComponent.gd"
+}, {
+"base": &"Node",
+"class": &"RawInputProcessor",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/RawInputProcessor.gd"
 }]
