--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -32,6 +32,14 @@ list=[{
 "path": "res://Scripts/CONTROL.gd"
 }, {
 "base": &"Node",
+"class": &"DirectControlComponent",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/ControlComponents/DirectControlComponent.gd"
+}, {
+"base": &"Node",
 "class": &"InputCore",
 "icon": "",
 "is_abstract": false,
