--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -56,6 +56,14 @@ list=[{
 "path": "res://Scripts/InputPriorityManager.gd"
 }, {
 "base": &"Node",
+"class": &"MovementComponent",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/CharacterComponents/MovementComponent.gd"
+}, {
+"base": &"Node",
 "class": &"OrbitComponent",
 "icon": "",
 "is_abstract": false,
