--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -17,11 +17,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 23,
+"column": 31,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 100,
-"scroll_position": 65.0,
+"row": 102,
+"scroll_position": 68.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -31,11 +31,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 2,
+"column": 63,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 204,
-"scroll_position": 92.0,
+"row": 141,
+"scroll_position": 122.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -73,11 +73,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 58,
+"column": 54,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 74,
-"scroll_position": 39.0,
+"row": 42,
+"scroll_position": 33.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -107,5 +107,23 @@ state={
 "row": 145,
 "scroll_position": 124.0,
 "selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/CharacterComponents/MovementComponent.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 46,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 159,
+"scroll_position": 141.0,
+"selection": true,
+"selection_from_column": 45,
+"selection_from_line": 159,
+"selection_to_column": 46,
+"selection_to_line": 159,
 "syntax_highlighter": "GDScript"
 }
