--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -29,8 +29,8 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://SCENE.tscn", "res://CCC.tscn", "res://Assets/Character.tscn")
-current_scene="res://CCC.tscn"
-center_split_offset=-700
+current_scene="res://SCENE.tscn"
+center_split_offset=-497
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
 selected_bottom_panel_item=0
@@ -44,8 +44,8 @@ size=Vector2i(3248, 1669)
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/CAMERA.gd", "res://Scripts/CCC_Manager.gd", "res://Scripts/CHARACTER.gd", "res://character_controller_plan.md", "res://Scripts/CONTROL.gd", "res://Scripts/ControlComponents/DirectControlComponent.gd", "res://Scripts/InputPriorityManager.gd", "res://Scripts/CharacterComponents/MovementComponent.gd", "res://Scripts/CameraComponents/OrbitComponent.gd"]
-selected_script="res://Scripts/CAMERA.gd"
+open_scripts=["res://Scripts/CAMERA.gd", "res://Scripts/CCC_Manager.gd", "res://Scripts/CHARACTER.gd", "res://character_controller_plan.md", "res://Scripts/CONTROL.gd", "res://Scripts/ControlComponents/DirectControlComponent.gd", "res://Scripts/InputPriorityManager.gd", "res://Scripts/CharacterComponents/MovementComponent.gd", "res://Scripts/CameraComponents/OrbitComponent.gd", "res://Scripts/ControlComponents/TargetControlComponenet.gd"]
+selected_script="res://Scripts/CharacterComponents/MovementComponent.gd"
 open_help=[]
 script_split_offset=526
 list_split_offset=0
