--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -78,4 +78,12 @@ list=[{
 "is_tool": false,
 "language": &"GDScript",
 "path": "res://Scripts/RawInputProcessor.gd"
+}, {
+"base": &"Node",
+"class": &"TargetControlComponent",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/ControlComponents/TargetControlComponenet.gd"
 }]
