--- a/.godot/editor/editor_layout-A0000H36DW4HXC6-2.cfg
+++ b/.godot/editor/editor_layout-A0000H36DW4HXC6-2.cfg
@@ -9,7 +9,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://")
+dock_filesystem_selected_paths=PackedStringArray("res://Scripts/CharacterComponents/MovementComponent.gd")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://THEORY/", "res://Scripts/", "res://Scripts/ControlComponents/", "res://Scripts/CharacterComponents/", "res://Scripts/CameraComponents/", "res://Assets/")
 dock_node_current_tab=0
 dock_history_include_scene=true
@@ -30,7 +30,7 @@ dock_5="Inspector,Node,History"
 
 open_scenes=PackedStringArray("res://SCENE.tscn", "res://CCC.tscn", "res://Assets/Character.tscn")
 current_scene="res://SCENE.tscn"
-center_split_offset=-359
+center_split_offset=-497
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
 selected_bottom_panel_item=0
@@ -45,7 +45,7 @@ size=Vector2i(3248, 1669)
 [ScriptEditor]
 
 open_scripts=["res://Scripts/CAMERA.gd", "res://Scripts/CCC_Manager.gd", "res://Scripts/CHARACTER.gd", "res://character_controller_plan.md", "res://Scripts/CONTROL.gd", "res://Scripts/ControlComponents/DirectControlComponent.gd", "res://Scripts/InputPriorityManager.gd", "res://Scripts/CharacterComponents/MovementComponent.gd", "res://Scripts/CameraComponents/OrbitComponent.gd", "res://Scripts/ControlComponents/TargetControlComponenet.gd"]
-selected_script="res://Scripts/CameraComponents/OrbitComponent.gd"
+selected_script="res://Scripts/CharacterComponents/MovementComponent.gd"
 open_help=[]
 script_split_offset=526
 list_split_offset=0
