CCC input priority system polich

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -40,6 +40,14 @@ list=[{
 "path": "res://Scripts/ControlComponents/DirectControlComponent.gd"
 }, {
 "base": &"Node",
+"class": &"GamepadControlComponent",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/ControlComponents/GamepadControlComponent.gd"
+}, {
+"base": &"Node",
 "class": &"InputCore",
 "icon": "",
 "is_abstract": false,
@@ -54,6 +62,14 @@ list=[{
 "is_tool": false,
 "language": &"GDScript",
 "path": "res://Scripts/InputPriorityManager.gd"
+}, {
+"base": &"Control",
+"class": &"InputVisualFeedback",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/ControlComponents/InputVisualFeedback.gd"
 }, {
 "base": &"Node",
 "class": &"MovementComponent",
