--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -21,7 +21,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 81,
-"scroll_position": 101.0,
+"scroll_position": 58.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -87,11 +87,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 14,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 134,
-"scroll_position": 105.0,
+"row": 399,
+"scroll_position": 352.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -105,7 +105,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 69,
-"scroll_position": 18.0,
+"scroll_position": 22.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -134,6 +134,34 @@ state={
 "h_scroll_position": 0,
 "row": 124,
 "scroll_position": 102.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/ControlComponents/GamepadControlComponent.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 1,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 213,
+"scroll_position": 201.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/ControlComponents/InputVisualFeedback.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 189,
+"scroll_position": 174.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
