ccc camera system

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -40,6 +40,22 @@ list=[{
 "path": "res://Scripts/ControlComponents/DirectControlComponent.gd"
 }, {
 "base": &"Node",
+"class": &"DistanceComponent",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/CameraComponents/DistanceComponent.gd"
+}, {
+"base": &"Node",
+"class": &"FollowComponent",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/CameraComponents/FollowComponent.gd"
+}, {
+"base": &"Node",
 "class": &"GamepadControlComponent",
 "icon": "",
 "is_abstract": false,
