--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -165,3 +165,31 @@ state={
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
+
+[res://Scripts/CameraComponents/DistanceComponent.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 90,
+"scroll_position": 78.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/CameraComponents/FollowComponent.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 2,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 244,
+"scroll_position": 220.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
