--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://CCC.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://Scripts/RawInputProcessor.gd")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://THEORY/", "res://Scripts/", "res://Scripts/ControlComponents/", "res://Scripts/CharacterComponents/", "res://Scripts/CameraComponents/", "res://Assets/")
 dock_node_current_tab=1
 dock_history_include_scene=true
@@ -44,7 +44,7 @@ size=Vector2i(3248, 1669)
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/CAMERA.gd", "res://Scripts/CCC_Manager.gd", "res://Scripts/CHARACTER.gd", "res://character_controller_plan.md", "res://Scripts/CONTROL.gd", "res://Scripts/ControlComponents/DirectControlComponent.gd", "res://Scripts/CameraComponents/DistanceComponent.gd", "res://Scripts/CameraComponents/FollowComponent.gd", "res://Scripts/ControlComponents/GamepadControlComponent.gd", "res://Scripts/InputCore.gd", "res://Scripts/InputPriorityManager.gd", "res://Scripts/ControlComponents/InputVisualFeedback.gd", "res://Scripts/CharacterComponents/MovementComponent.gd", "res://Scripts/CameraComponents/OrbitComponent.gd", "res://Scripts/ControlComponents/TargetControlComponenet.gd"]
+open_scripts=["res://Scripts/CAMERA.gd", "res://Scripts/CCC_Manager.gd", "res://Scripts/CHARACTER.gd", "res://character_controller_plan.md", "res://Scripts/CONTROL.gd", "res://Scripts/ControlComponents/DirectControlComponent.gd", "res://Scripts/CameraComponents/DistanceComponent.gd", "res://Scripts/CameraComponents/FollowComponent.gd", "res://Scripts/ControlComponents/GamepadControlComponent.gd", "res://Scripts/InputCore.gd", "res://Scripts/InputPriorityManager.gd", "res://Scripts/ControlComponents/InputVisualFeedback.gd", "res://Scripts/CharacterComponents/MovementComponent.gd", "res://Scripts/CameraComponents/OrbitComponent.gd", "res://Scripts/RawInputProcessor.gd", "res://Scripts/ControlComponents/TargetControlComponenet.gd"]
 selected_script="res://Scripts/ControlComponents/TargetControlComponenet.gd"
 open_help=[]
 script_split_offset=526
